<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.search.SearchActivity">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_search_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/guild_line_18dp"
            android:layout_marginLeft="@dimen/guild_line_18dp"
            android:layout_marginTop="@dimen/guild_line_18dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/ic_arrow_back_blue_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/colorBlackWhite"
            android:textSize="@dimen/size_text_big_24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ib_search_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/ib_search_back" />

        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_search_box"
            android:layout_marginTop="14dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ib_search_back">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorGreyWhite"
                android:hint="@string/search_gif"
                android:imeOptions="actionSearch"
                android:paddingStart="@dimen/guild_line_18dp"
                android:paddingLeft="@dimen/guild_line_18dp"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorTextGrey"
                android:textSize="@dimen/size_text_small_12sp"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ib_search"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:background="@color/colorPurple"
                android:padding="6dp"
                android:src="@drawable/ic_search_white_24dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_search_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/guild_line_18dp"
            android:layout_marginLeft="@dimen/guild_line_18dp"
            android:layout_marginTop="12dp"
            android:text="@string/search_history"
            android:textColor="@color/colorBlackWhite"
            android:textSize="@dimen/size_text_small_12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_search" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorBlackWhite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/rv_search_history" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_history"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_search_history" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>