<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_trend_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_trend_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/guild_line_18dp"
            android:layout_marginLeft="@dimen/guild_line_18dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/app_name"
            android:textColor="@color/colorBlackWhite"
            android:textSize="@dimen/size_text_big_24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_trend_logo"
            app:layout_constraintLeft_toRightOf="@id/iv_trend_logo"
            app:layout_constraintTop_toTopOf="@id/iv_trend_logo" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_trend_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/guild_line_18dp"
            android:layout_marginRight="@dimen/guild_line_18dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_favorite_red_24dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_trend_logo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_trend_logo" />

        <LinearLayout
            android:id="@+id/ll_trend_search"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_trend_logo">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorGreyWhite"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/guild_line_18dp"
                android:paddingLeft="@dimen/guild_line_18dp"
                android:text="@string/search_gif"
                android:textColor="@color/colorTextGrey"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:background="@color/colorPurple"
                android:padding="6dp"
                android:src="@drawable/ic_search_white_24dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_trend_gif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/guild_line_18dp"
            android:layout_marginLeft="@dimen/guild_line_18dp"
            android:layout_marginTop="12dp"
            android:text="@string/trend_gif"
            android:textColor="@color/colorBlackWhite"
            android:textSize="@dimen/size_text_small_12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_trend_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trend"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_trend_gif"
            app:spanCount="2" />

        <ProgressBar
            android:id="@+id/pb_trend_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>